# aws_resource_validator

./: .flake8  .gitignore  .pylintrc  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  api_registry_definitions.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_import.py  validator.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bandit.yml  ci-tests-mkdocs-deployment.yml  linter-and-test.yml  release-package.yml
.idx/: dev.nix
api/accessanalyzer/: index.html
api/account/: index.html
api/acm/: index.html
api/acmpca/: index.html
api/alexaforbusiness/: index.html
api/amp/: index.html
api/amplify/: index.html
api/amplifybackend/: index.html
api/amplifyuibuilder/: index.html
api/apigateway/: index.html
api/apigatewaymanagementapi/: index.html
api/apigatewayv2/: index.html
api/appconfig/: index.html
api/appconfigdata/: index.html
api/appfabric/: index.html
api/appflow/: index.html
api/appintegrations/: index.html
api/applicationautoscaling/: index.html
api/applicationcostprofiler/: index.html
api/applicationinsights/: index.html
api/appmesh/: index.html
api/apprunner/: index.html
api/appstream/: index.html
api/appsync/: index.html
api/arczonalshift/: index.html
api/artifact/: index.html
api/athena/: index.html
api/auditmanager/: index.html
api/autoscaling/: index.html
api/autoscalingplans/: index.html
api/b2bi/: index.html
api/backup/: index.html
api/backupgateway/: index.html
api/backupstorage/: index.html
api/batch/: index.html
api/bcmdataexports/: index.html
api/bedrock/: index.html
api/bedrockagent/: index.html
api/bedrockagentruntime/: index.html
api/bedrockruntime/: index.html
api/billingconductor/: index.html
api/braket/: index.html
api/budgets/: index.html
api/ce/: index.html
api/chatbot/: index.html
api/chime/: index.html
api/chimesdkidentity/: index.html
api/chimesdkmediapipelines/: index.html
api/chimesdkmeetings/: index.html
api/chimesdkmessaging/: index.html
api/chimesdkvoice/: index.html
api/cleanrooms/: index.html
api/cleanroomsml/: index.html
api/cloud9/: index.html
api/cloudcontrol/: index.html
api/clouddirectory/: index.html
api/cloudformation/: index.html
api/cloudfront/: index.html
api/cloudfrontkeyvaluestore/: index.html
api/cloudhsm/: index.html
api/cloudhsmv2/: index.html
api/cloudsearch/: index.html
api/cloudsearchdomain/: index.html
api/cloudtrail/: index.html
api/cloudtraildata/: index.html
api/cloudwatch/: index.html
api/codeartifact/: index.html
api/codebuild/: index.html
api/codecatalyst/: index.html
api/codecommit/: index.html
api/codeconnections/: index.html
api/codedeploy/: index.html
api/codeguruprofiler/: index.html
api/codegurureviewer/: index.html
api/codegurusecurity/: index.html
api/codepipeline/: index.html
api/codestar/: index.html
api/codestarconnections/: index.html
api/codestarnotifications/: index.html
api/cognitoidentity/: index.html
api/cognitoidp/: index.html
api/cognitosync/: index.html
api/comprehend/: index.html
api/comprehendmedical/: index.html
api/computeoptimizer/: index.html
api/config/: index.html
api/connect/: index.html
api/connectcampaigns/: index.html
api/connectcases/: index.html
api/connectcontactlens/: index.html
api/connectparticipant/: index.html
api/controlcatalog/: index.html
api/controltower/: index.html
api/costoptimizationhub/: index.html
api/cur/: index.html
api/customerprofiles/: index.html
api/databrew/: index.html
api/dataexchange/: index.html
api/datapipeline/: index.html
api/datasync/: index.html
api/datazone/: index.html
api/dax/: index.html
api/deadline/: index.html
api/detective/: index.html
api/devicefarm/: index.html
api/devopsguru/: index.html
api/directconnect/: index.html
api/discovery/: index.html
api/dlm/: index.html
api/dms/: index.html
api/docdb/: index.html
api/docdbelastic/: index.html
api/drs/: index.html
api/ds/: index.html
api/dynamodb/: index.html
api/dynamodbstreams/: index.html
api/ebs/: index.html
api/ec2/: index.html
api/ec2instanceconnect/: index.html
api/ecr/: index.html
api/ecrpublic/: index.html
api/ecs/: index.html
api/efs/: index.html
api/eks/: index.html
api/eksauth/: index.html
api/elasticache/: index.html
api/elasticbeanstalk/: index.html
api/elasticinference/: index.html
api/elastictranscoder/: index.html
api/elb/: index.html
api/elbv2/: index.html
api/emr/: index.html
api/emrcontainers/: index.html
api/emrserverless/: index.html
api/entityresolution/: index.html
api/es/: index.html
api/events/: index.html
api/evidently/: index.html
api/finspace/: index.html
api/finspacedata/: index.html
api/firehose/: index.html
api/fis/: index.html
api/fms/: index.html
api/forecast/: index.html
api/forecastquery/: index.html
api/frauddetector/: index.html
api/freetier/: index.html
api/fsx/: index.html
api/gamelift/: index.html
api/glacier/: index.html
api/globalaccelerator/: index.html
api/glue/: index.html
api/grafana/: index.html
api/greengrass/: index.html
api/greengrassv2/: index.html
api/groundstation/: index.html
api/guardduty/: index.html
api/health/: index.html
api/healthlake/: index.html
api/honeycode/: index.html
api/iam/: index.html
api/identitystore/: index.html
aws_resource_validator/: __init__.py  annotate_boto3_classes.py  api_registry_definitions.py  class_definitions.py  class_generator.py  main.py  models.py  pydantic_generator.py  scrapper.py  utils.py
best_practices/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: .pages  api.md  best_practices.md  code_of_conduct.md  configuration.md  contributing.md  index.md  installation.md  packaging.md  usage.md
installation/: index.html
packaging/: index.html
scripts/: create_subpackages.py  generate_markdown_files.py  replace.zsh
search/: search_index.json
tests/: conftest.py
usage/: index.html
(+4469 files in other folders)
