[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry]
name = "aws-resource-validator"
version = "2.0.0"
description = "Validate, get validation patterns and generate valid AWS resource names, plus Pydantic v2 models mirroring the boto3 typed-dicts for every AWS service."
authors = ["Alexy Grabov <alexy.grabov@gmail.com>", "Yafit Tupman <ytupman@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "aws_resource_validator" }]
# pydantic_models/ ships as sibling PEP 420 namespace wheels
# (aws-resource-validator-<svc>); keep it out of the main wheel.
exclude = ["aws_resource_validator/pydantic_models/**"]

[tool.poetry.dependencies]
python = "^3.11"
exrex = "*"
pydantic = "^2.8"
botocore = "*"
# Generator extra — installs the libs needed to run ``arv-generate``.
# The generator code itself always ships in the main wheel; these are
# the heavy third-party deps it imports.
requests = { version = "*", optional = true }
jinja2 = { version = "*", optional = true }
typer = { version = "*", optional = true }
black = { version = "*", optional = true }
# --- BEGIN GENERATED OPTIONAL DEPS ---
# Popular services — one optional dep per service (popular_services.txt).
"aws-resource-validator-apigateway" = { version = "==2.0.0", optional = true }
"aws-resource-validator-apigatewayv2" = { version = "==2.0.0", optional = true }
"aws-resource-validator-athena" = { version = "==2.0.0", optional = true }
"aws-resource-validator-bedrock" = { version = "==2.0.0", optional = true }
"aws-resource-validator-cloudformation" = { version = "==2.0.0", optional = true }
"aws-resource-validator-cloudwatch" = { version = "==2.0.0", optional = true }
"aws-resource-validator-cognito-idp" = { version = "==2.0.0", optional = true }
"aws-resource-validator-dynamodb" = { version = "==2.0.0", optional = true }
"aws-resource-validator-ec2" = { version = "==2.0.0", optional = true }
"aws-resource-validator-ecs" = { version = "==2.0.0", optional = true }
"aws-resource-validator-elbv2" = { version = "==2.0.0", optional = true }
"aws-resource-validator-events" = { version = "==2.0.0", optional = true }
"aws-resource-validator-firehose" = { version = "==2.0.0", optional = true }
"aws-resource-validator-glue" = { version = "==2.0.0", optional = true }
"aws-resource-validator-iam" = { version = "==2.0.0", optional = true }
"aws-resource-validator-kinesis" = { version = "==2.0.0", optional = true }
"aws-resource-validator-kms" = { version = "==2.0.0", optional = true }
"aws-resource-validator-lambda" = { version = "==2.0.0", optional = true }
"aws-resource-validator-logs" = { version = "==2.0.0", optional = true }
"aws-resource-validator-rds" = { version = "==2.0.0", optional = true }
"aws-resource-validator-redshift" = { version = "==2.0.0", optional = true }
"aws-resource-validator-route53" = { version = "==2.0.0", optional = true }
"aws-resource-validator-s3" = { version = "==2.0.0", optional = true }
"aws-resource-validator-sagemaker" = { version = "==2.0.0", optional = true }
"aws-resource-validator-secretsmanager" = { version = "==2.0.0", optional = true }
"aws-resource-validator-sns" = { version = "==2.0.0", optional = true }
"aws-resource-validator-sqs" = { version = "==2.0.0", optional = true }
"aws-resource-validator-ssm" = { version = "==2.0.0", optional = true }
"aws-resource-validator-stepfunctions" = { version = "==2.0.0", optional = true }
"aws-resource-validator-sts" = { version = "==2.0.0", optional = true }
# Domain shards — metapackages (shards.toml).
"aws-resource-validator-ai" = { version = "==2.0.0", optional = true }
"aws-resource-validator-compute" = { version = "==2.0.0", optional = true }
"aws-resource-validator-data" = { version = "==2.0.0", optional = true }
"aws-resource-validator-integration" = { version = "==2.0.0", optional = true }
"aws-resource-validator-management" = { version = "==2.0.0", optional = true }
"aws-resource-validator-networking" = { version = "==2.0.0", optional = true }
"aws-resource-validator-rest" = { version = "==2.0.0", optional = true }
"aws-resource-validator-security" = { version = "==2.0.0", optional = true }
# --- END GENERATED OPTIONAL DEPS ---

[tool.poetry.group.dev.dependencies]
# Generator deps, pulled in for local development so ``arv-generate``
# works out of ``poetry install`` without needing to request the extra.
requests = "*"
jinja2 = "*"
typer = "*"
black = "*"
boto3-stubs = { extras = ["all"], version = "*" }

# Test & lint.
pytest = "^9.0"
pytest-xdist = "*"
pytest-cov = "*"
responses = "*"
ruff = "*"
mypy = "*"

# Release tooling.
build = "*"
hatchling = "*"

[tool.poetry.scripts]
arv-generate = "aws_resource_validator.generator.__main__:main"

# ---------------------------------------------------------------------------
# Extras
#
# The entire [tool.poetry.extras] table is generated by
# ``scripts/release/sync_extras.py`` from
# ``scripts/release/popular_services.txt`` + ``scripts/release/shards.toml``.
# Do not hand-edit between the BEGIN/END markers — run ``sync_extras.py
# --write`` instead. CI enforces synchronization via ``--check``.
# ---------------------------------------------------------------------------
# --- BEGIN GENERATED EXTRAS ---
[tool.poetry.extras]
generator = ["requests", "jinja2", "typer", "black"]

# Individual services (popular — curated in popular_services.txt).
apigateway = ["aws-resource-validator-apigateway"]
apigatewayv2 = ["aws-resource-validator-apigatewayv2"]
athena = ["aws-resource-validator-athena"]
bedrock = ["aws-resource-validator-bedrock"]
cloudformation = ["aws-resource-validator-cloudformation"]
cloudwatch = ["aws-resource-validator-cloudwatch"]
cognito-idp = ["aws-resource-validator-cognito-idp"]
dynamodb = ["aws-resource-validator-dynamodb"]
ec2 = ["aws-resource-validator-ec2"]
ecs = ["aws-resource-validator-ecs"]
elbv2 = ["aws-resource-validator-elbv2"]
events = ["aws-resource-validator-events"]
firehose = ["aws-resource-validator-firehose"]
glue = ["aws-resource-validator-glue"]
iam = ["aws-resource-validator-iam"]
kinesis = ["aws-resource-validator-kinesis"]
kms = ["aws-resource-validator-kms"]
lambda = ["aws-resource-validator-lambda"]
logs = ["aws-resource-validator-logs"]
rds = ["aws-resource-validator-rds"]
redshift = ["aws-resource-validator-redshift"]
route53 = ["aws-resource-validator-route53"]
s3 = ["aws-resource-validator-s3"]
sagemaker = ["aws-resource-validator-sagemaker"]
secretsmanager = ["aws-resource-validator-secretsmanager"]
sns = ["aws-resource-validator-sns"]
sqs = ["aws-resource-validator-sqs"]
ssm = ["aws-resource-validator-ssm"]
stepfunctions = ["aws-resource-validator-stepfunctions"]
sts = ["aws-resource-validator-sts"]

# Domain shards (metapackages — shards.toml).
ai = ["aws-resource-validator-ai"]
compute = ["aws-resource-validator-compute"]
data = ["aws-resource-validator-data"]
integration = ["aws-resource-validator-integration"]
management = ["aws-resource-validator-management"]
networking = ["aws-resource-validator-networking"]
rest = ["aws-resource-validator-rest"]
security = ["aws-resource-validator-security"]

# ``all`` = every shard (transitively every service).
all = ["aws-resource-validator-ai", "aws-resource-validator-compute", "aws-resource-validator-data", "aws-resource-validator-integration", "aws-resource-validator-management", "aws-resource-validator-networking", "aws-resource-validator-rest", "aws-resource-validator-security"]
# --- END GENERATED EXTRAS ---

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "generated: auto-generated parametrized tests over pydantic models",
    "integration: cross-module integration tests",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["aws_resource_validator"]
omit = [
    "aws_resource_validator/class_definitions.py",
    "aws_resource_validator/pydantic_models/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "aws_resource_validator/class_definitions.py",
    "aws_resource_validator/pydantic_models",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "B018", "PLW0108", "PLC0415"]
# Typer's documented API requires calling ``typer.Option`` in argument defaults.
"aws_resource_validator/generator/cli.py" = ["B008"]
# Lazy import is the whole point of this shim — see the module docstring.
"aws_resource_validator/generator/__main__.py" = ["PLC0415"]
# Release scripts: tolerate inline imports (for optional playwright dep),
# longer lines in template strings, etc. Not production runtime code.
"scripts/release/*" = ["E501", "PLC0415", "PLR0911", "PLR0912", "B007", "SIM113", "PLW2901", "PLR0915"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["aws_resource_validator/core", "aws_resource_validator/generator"]

[[tool.mypy.overrides]]
module = ["exrex.*", "responses.*", "botocore.*", "requests.*"]
ignore_missing_imports = true
