[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

# ---------------------------------------------------------------------------
# Core package metadata (PEP 621).
#
# Using [project] + [project.optional-dependencies] instead of the older
# [tool.poetry.dependencies] + [tool.poetry.extras] shape because the
# per-service ``aws-resource-validator-<svc>`` wheels are released in
# lock-step with the main package — and the first release can't succeed
# if ``poetry lock`` insists on resolving them from PyPI before they
# exist. PEP 621 optional-dependencies are treated as resolver-inert by
# Poetry (they're only fetched when a downstream ``pip install
# aws-resource-validator[...]`` requests the extra), which sidesteps the
# chicken-and-egg on first publish.
# ---------------------------------------------------------------------------
[project]
name = "aws-resource-validator"
version = "2.0.0"
description = "Validate, get validation patterns and generate valid AWS resource names, plus Pydantic v2 models mirroring the boto3 typed-dicts for every AWS service."
authors = [
    { name = "Alexy Grabov", email = "alexy.grabov@gmail.com" },
    { name = "Yafit Tupman", email = "ytupman@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "exrex",
    "pydantic (>=2.8,<3.0)",
    "botocore",
]

[project.scripts]
arv-generate = "aws_resource_validator.generator.__main__:main"

[tool.poetry]
# PEP 621 [project] above owns name / version / description / authors /
# dependencies. This table only carries Poetry-specific tuning that PEP
# 621 doesn't express: what to include in the wheel, and what to
# exclude. Requires Poetry 2.0+ (CI uses 2.2+; local dev likewise).
packages = [{ include = "aws_resource_validator" }]
exclude = ["aws_resource_validator/pydantic_models/**"]

[tool.poetry.group.dev.dependencies]
# Generator deps, pulled in for local development so ``arv-generate``
# works out of ``poetry install`` without needing to request the extra.
requests = "*"
jinja2 = "*"
typer = "*"
black = "*"
boto3-stubs = { extras = ["all"], version = "*" }

# Test & lint.
pytest = "^9.0"
pytest-xdist = "*"
pytest-cov = "*"
responses = "*"
ruff = "*"
mypy = "*"

# Release tooling.
build = "*"
hatchling = "*"

# ---------------------------------------------------------------------------
# Extras
#
# [project.optional-dependencies] is generated by
# ``scripts/release/sync_extras.py`` from
# ``scripts/release/popular_services.txt`` + ``scripts/release/shards.toml``.
# Do not hand-edit between the BEGIN/END markers — run ``sync_extras.py
# --write`` instead. CI enforces synchronization via ``--check``.
# ---------------------------------------------------------------------------
# --- BEGIN GENERATED EXTRAS ---
[project.optional-dependencies]
generator = [
    "requests",
    "jinja2",
    "typer",
    "black",
]

# Bootstrap mode: service/shard extras omitted because the
# per-service PyPI projects don't exist yet. Re-run
# ``sync_extras.py --write`` (without --bootstrap) after the
# first release registers those projects on PyPI.
# --- END GENERATED EXTRAS ---

[build-system]
# poetry-core >=2 is required: it reads extras from
# [project.optional-dependencies]. Older versions only honor
# [tool.poetry.extras], which silently produces a wheel with no
# Provides-Extra / Requires-Dist entries.
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "generated: auto-generated parametrized tests over pydantic models",
    "integration: cross-module integration tests",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["aws_resource_validator"]
omit = [
    "aws_resource_validator/class_definitions.py",
    "aws_resource_validator/pydantic_models/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "aws_resource_validator/class_definitions.py",
    "aws_resource_validator/pydantic_models",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "B018", "PLW0108", "PLC0415"]
# Typer's documented API requires calling ``typer.Option`` in argument defaults.
"aws_resource_validator/generator/cli.py" = ["B008"]
# Lazy import is the whole point of this shim — see the module docstring.
"aws_resource_validator/generator/__main__.py" = ["PLC0415"]
# Release scripts: tolerate inline imports (for optional playwright dep),
# longer lines in template strings, etc. Not production runtime code.
"scripts/release/*" = ["E501", "PLC0415", "PLR0911", "PLR0912", "B007", "SIM113", "PLW2901", "PLR0915"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["aws_resource_validator/core", "aws_resource_validator/generator"]

[[tool.mypy.overrides]]
module = ["exrex.*", "responses.*", "botocore.*", "requests.*"]
ignore_missing_imports = true
