[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

# ---------------------------------------------------------------------------
# Core package metadata (PEP 621).
#
# Uses [project] + [project.optional-dependencies] instead of the older
# [tool.poetry.dependencies] + [tool.poetry.extras] shape so that
# poetry-core 2.x emits ``Provides-Extra`` / ``Requires-Dist`` entries
# referencing the sibling ``aws-resource-validator-<svc>`` wheels.
# ---------------------------------------------------------------------------
[project]
name = "aws-resource-validator"
version = "2.0.2"
description = "Validate, get validation patterns and generate valid AWS resource names, plus Pydantic v2 models mirroring the boto3 typed-dicts for every AWS service."
authors = [
    { name = "Alexy Grabov", email = "alexy.grabov@gmail.com" },
    { name = "Yafit Tupman", email = "ytupman@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "exrex",
    "pydantic (>=2.13.3,<3.0)",
    "botocore",
]

[project.scripts]
arv-generate = "aws_resource_validator.generator.__main__:main"

[tool.poetry]
# PEP 621 [project] above owns name / version / description / authors /
# dependencies. This table only carries Poetry-specific tuning that PEP
# 621 doesn't express: what to include in the wheel, and what to
# exclude. Requires Poetry 2.0+ (CI uses 2.2+; local dev likewise).
packages = [{ include = "aws_resource_validator" }]
exclude = ["aws_resource_validator/pydantic_models/**"]

[tool.poetry.group.dev.dependencies]
# Generator deps, pulled in for local development so ``arv-generate``
# works out of ``poetry install`` without needing to request the extra.
requests = "*"
jinja2 = "*"
typer = "*"
black = "*"
boto3-stubs = { extras = ["all"], version = "*" }

# Test & lint.
pytest = "^9.0"
pytest-xdist = "*"
pytest-cov = "*"
responses = "*"
ruff = "*"
mypy = "*"

# Release tooling.
build = "*"
hatchling = "*"

# ---------------------------------------------------------------------------
# Extras
#
# [project.optional-dependencies] is generated by
# ``scripts/release/sync_extras.py`` from
# ``scripts/release/popular_services.txt`` + ``scripts/release/shards.toml``.
# Do not hand-edit between the BEGIN/END markers — run ``sync_extras.py
# --write`` instead. CI enforces synchronization via ``--check``.
# ---------------------------------------------------------------------------
# --- BEGIN GENERATED EXTRAS ---
[project.optional-dependencies]
generator = [
    "requests",
    "jinja2",
    "typer",
    "black",
]

# Individual services (popular — curated in popular_services.txt).
apigateway = [
    "aws-resource-validator-apigateway==2.0.2",
]
apigatewayv2 = [
    "aws-resource-validator-apigatewayv2==2.0.2",
]
athena = [
    "aws-resource-validator-athena==2.0.2",
]
bedrock = [
    "aws-resource-validator-bedrock==2.0.2",
]
cloudformation = [
    "aws-resource-validator-cloudformation==2.0.2",
]
cloudwatch = [
    "aws-resource-validator-cloudwatch==2.0.2",
]
cognito-idp = [
    "aws-resource-validator-cognito-idp==2.0.2",
]
dynamodb = [
    "aws-resource-validator-dynamodb==2.0.2",
]
ec2 = [
    "aws-resource-validator-ec2==2.0.2",
]
ecs = [
    "aws-resource-validator-ecs==2.0.2",
]
elbv2 = [
    "aws-resource-validator-elbv2==2.0.2",
]
events = [
    "aws-resource-validator-events==2.0.2",
]
firehose = [
    "aws-resource-validator-firehose==2.0.2",
]
glue = [
    "aws-resource-validator-glue==2.0.2",
]
iam = [
    "aws-resource-validator-iam==2.0.2",
]
kinesis = [
    "aws-resource-validator-kinesis==2.0.2",
]
kms = [
    "aws-resource-validator-kms==2.0.2",
]
lambda = [
    "aws-resource-validator-lambda==2.0.2",
]
logs = [
    "aws-resource-validator-logs==2.0.2",
]
rds = [
    "aws-resource-validator-rds==2.0.2",
]
redshift = [
    "aws-resource-validator-redshift==2.0.2",
]
route53 = [
    "aws-resource-validator-route53==2.0.2",
]
s3 = [
    "aws-resource-validator-s3==2.0.2",
]
sagemaker = [
    "aws-resource-validator-sagemaker==2.0.2",
]
secretsmanager = [
    "aws-resource-validator-secretsmanager==2.0.2",
]
sns = [
    "aws-resource-validator-sns==2.0.2",
]
sqs = [
    "aws-resource-validator-sqs==2.0.2",
]
ssm = [
    "aws-resource-validator-ssm==2.0.2",
]
stepfunctions = [
    "aws-resource-validator-stepfunctions==2.0.2",
]
sts = [
    "aws-resource-validator-sts==2.0.2",
]

# Domain shards (metapackages — shards.toml).
ai = [
    "aws-resource-validator-ai==2.0.2",
]
compute = [
    "aws-resource-validator-compute==2.0.2",
]
data = [
    "aws-resource-validator-data==2.0.2",
]
integration = [
    "aws-resource-validator-integration==2.0.2",
]
management = [
    "aws-resource-validator-management==2.0.2",
]
networking = [
    "aws-resource-validator-networking==2.0.2",
]
rest = [
    "aws-resource-validator-rest==2.0.2",
]
security = [
    "aws-resource-validator-security==2.0.2",
]

# ``all`` = every shard (transitively every service).
all = [
    "aws-resource-validator-ai==2.0.2",
    "aws-resource-validator-compute==2.0.2",
    "aws-resource-validator-data==2.0.2",
    "aws-resource-validator-integration==2.0.2",
    "aws-resource-validator-management==2.0.2",
    "aws-resource-validator-networking==2.0.2",
    "aws-resource-validator-rest==2.0.2",
    "aws-resource-validator-security==2.0.2",
]
# --- END GENERATED EXTRAS ---

[build-system]
# poetry-core >=2 is required: it reads extras from
# [project.optional-dependencies]. Older versions only honor
# [tool.poetry.extras], which silently produces a wheel with no
# Provides-Extra / Requires-Dist entries.
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "generated: auto-generated parametrized tests over pydantic models",
    "integration: cross-module integration tests",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["aws_resource_validator"]
omit = [
    "aws_resource_validator/class_definitions.py",
    "aws_resource_validator/pydantic_models/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "aws_resource_validator/class_definitions.py",
    "aws_resource_validator/pydantic_models",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "B018", "PLW0108", "PLC0415"]
# Typer's documented API requires calling ``typer.Option`` in argument defaults.
"aws_resource_validator/generator/cli.py" = ["B008"]
# Lazy import is the whole point of this shim — see the module docstring.
"aws_resource_validator/generator/__main__.py" = ["PLC0415"]
# Release scripts: tolerate inline imports (for optional playwright dep),
# longer lines in template strings, etc. Not production runtime code.
"scripts/release/*" = ["E501", "PLC0415", "PLR0911", "PLR0912", "B007", "SIM113", "PLW2901", "PLR0915"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["aws_resource_validator/core", "aws_resource_validator/generator"]

[[tool.mypy.overrides]]
module = ["exrex.*", "responses.*", "botocore.*", "requests.*"]
ignore_missing_imports = true
